--- a/src/detail.css
+++ b/src/detail.css
@@ -11,3 +11,44 @@ ul {
 li {
   margin-bottom: 5px;
 }
+
+.backdrop {
+  position: relative;
+  top: 0;
+  left: 0;
+}
+
+.backdrop__overlay {
+  position: absolute;
+  width: 1440px;
+  height: 600px;
+  background-color: #000000;
+  top: 0;
+  left: 0;
+  opacity: 0.8;
+}
+
+.movie__backdrop {
+  position: absolute;
+  width: 1440px;
+  height: 600px;
+}
+
+.detail {
+  color: white;
+  padding-top: 50px;
+}
+
+.poster__detail {
+  width: 200px;
+  height: 300px;
+}
+
+.movie__title__detail {
+  float: left;
+  margin-right: 10px;
+}
+
+.movie__title__year {
+  padding-top: 10px;
+}
