--- a/src/detail.css
+++ b/src/detail.css
@@ -18,10 +18,14 @@ li {
   left: 0;
 }
 
+.detail__container {
+  padding-top: 50px;
+}
+
 .backdrop__overlay {
   position: absolute;
   width: 1440px;
-  height: 600px;
+  height: 500px;
   background-color: #000000;
   top: 0;
   left: 0;
@@ -31,12 +35,11 @@ li {
 .movie__backdrop {
   position: absolute;
   width: 1440px;
-  height: 600px;
+  height: 500px;
 }
 
 .detail {
   color: white;
-  padding-top: 50px;
 }
 
 .poster__detail {
@@ -50,5 +53,24 @@ li {
 }
 
 .movie__title__year {
+  float: right;
   padding-top: 10px;
+}
+
+#movie__rating {
+  color: rgb(241, 207, 94);
+  padding-left: 100px;
+  font-size: 25px;
+  font-family: "GothamHTF";
+  font-weight: bold;
+}
+
+.tabs {
+  position: relative;
+  padding-top: 100px;
+}
+
+.react-tabs__tab {
+  padding: 10px 100px;
+  font-weight: bold;
 }
