--- a/src/detail.css
+++ b/src/detail.css
@@ -42,6 +42,10 @@ li {
   color: white;
 }
 
+.movie__detail {
+  height: 500px;
+}
+
 .poster__detail {
   width: 200px;
   height: 300px;
@@ -65,12 +69,32 @@ li {
   font-weight: bold;
 }
 
-.tabs {
-  position: relative;
-  padding-top: 100px;
+.react-tabs__tab-list {
+  border-bottom: 1px solid #d7d7d7;
 }
 
 .react-tabs__tab {
-  padding: 10px 100px;
-  font-weight: bold;
+  font-weight: 600;
+  font-size: 18px;
+  width: 20%;
+  padding: 0.6em;
+  color: #000;
+  cursor: pointer;
+  text-decoration: none;
+  text-align: center;
+}
+
+.react-tabs__tab-panel {
+  padding-top: 20px;
+}
+
+.react-tabs .react-tabs__tab--selected {
+  background: #fff;
+  box-shadow: inset 0 3px rgb(4, 199, 106);
+  border-radius: 0;
+  border: none;
+}
+
+.card {
+  margin-bottom: 15px;
 }
