--- a/src/detail.css
+++ b/src/detail.css
@@ -29,7 +29,7 @@ li {
   background-color: #000000;
   top: 0;
   left: 0;
-  opacity: 0.8;
+  opacity: 0.9;
 }
 
 .movie__backdrop {
@@ -97,4 +97,5 @@ li {
 
 .card {
   margin-bottom: 15px;
+  width: 100rem;
 }
